[package]
name = "kms"
version = "0.3.1"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
zk-paillier = {version = "0.4.3", default-features = false}
curv-kzen = {version = "0.9", features = ["num-bigint"], default-features = false}
zk-paillier = { version = "0.4.3", default-features = false }
centipede = { version = "0.3", default-features = false }

[dependencies.multi-party-schnorr]
git = "https://github.com/Boelroy/multi-party-schnorr"

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
rev = "c80c87d130f4b742c346cbd3095f24d602834b2c"
default-features = false

[features]
default = ["curv/rust-gmp-kzen"]
